--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,8 @@ Performance Refactor:
 * Figure out why time profile says md5 is so much longer than tictactoe while
   wall profile says tictactoe is much longer than md5.
 * Figure out why tictactoe profile seems so useless.
+* Figure out why the Md5 cls optimization cut wall time by a factor of 1000,
+  but profile time only by a factor of 3.
 * Clearly specify performance of evaluation in spec.
  - We should be able to list all possible performance model parameters based
    on the spec description.
