--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -153,11 +153,10 @@ context. Otherwise self-contained blocks of code could not be reused in
 contexts that happen to declare a variable with the same name as some variable
 in the self-contained block.
 
-Runtime is O(log(N)), where N is the number of active variables in scope.
-TODO: Clearly specify what it means to be an active variable. The notion I'm
-going for is if you are executing the body of a function, variables declared
-outside the function are only considered active if they are used somewhere in
-the function. The same for other thunk contexts like link and exec.
+Runtime is O(log(N)), where N is the number of variables in scope. In the case
+of delayed evaluation of functions and processes, the number of variables in
+scope is limited by the number of variables captured by the function or
+process when it is created.
 
 2.5 Let
 -------
@@ -204,7 +203,9 @@ Bindings are allowed to defined variables with the same name as variables
 already in scope, thus shadowing the variable already in scope. Except that
 the variables defined in a single let expression must have distinct names.
 
-Runtime is ???
+Runtime is O(N log(M)) plus the runtimes of the bindings and the runtime of
+the body, where N is the number of bindings and M is the number of variables
+in scope.
 
 3. Structs
 ----------
@@ -236,6 +237,8 @@ Examples:
 Struct types are considered equal if their fields are equal, including field
 types, field names, and the order of the fields.
 
+Runtime is O(1).
+
 3.2 Struct Value Explicit Type
 ------------------------------
 Abstract Syntax:
@@ -256,8 +259,8 @@ The expression is evaluated by evaluating all arguments and creating a struct
 value with the results. The arguments may be evaluated in any order,
 sequentially or in parallel.
 
-Runtime is O(N) plus the sum of the runtimes of each of the arguments, where N
-is the number of arguments.
+Runtime is O(N) plus the runtimes of the arguments, where N is the number of
+arguments.
 
 3.3 Struct Value Implicit Type
 ------------------------------
@@ -291,8 +294,8 @@ The expression is evaluated by evaluating all arguments and creating a struct
 value with the results. The arguments may be evaluated in any order,
 sequentially or in parallel.
 
-Runtime is O(N) plus the sum of the runtimes of each of the arguments, where N
-is the number of arguments.
+Runtime is O(N) plus the runtimes of the arguments, where N is the number of
+arguments.
 
 3.4 Struct Access
 -----------------
@@ -376,9 +379,8 @@ Or, as another example, the following two are equivalent:
 1. Bool@ True = Bool@(true: Unit@()); ...
 2. @(True: Bool@(true: Unit@())); ...
 
-Runtime is O(N) plus the runtimes of the object and the body, where N is the
-number of fields in the struct.
-TODO: plus O(log(M)) where M is the number of variables in scope?
+Runtime is O(N log(M)) plus the runtimes of the object and the body, where N is the
+number of fields in the struct and M is the number of variables in scope.
 
 4. Unions
 ---------
@@ -406,6 +408,8 @@ Example:
 Union types are considered equal if their fields are equal, including field
 types, field names, and the order of the fields.
 
+Runtime is O(1).
+
 4.2 Union Value
 ---------------
 Abstract Syntax:
@@ -426,7 +430,6 @@ value with the result.
 
 Runtime is O(log(N)) plus the runtime of the arg, where N is the number of
 fields in the union.
-TODO: not O(1) plus the runtime of the arg?
 
 4.3 Union Access
 ----------------
@@ -452,7 +455,6 @@ value.
 
 Runtime is O(log(N)) plus the runtime of the object, where N is the number of
 fields in the union.
-TODO: not O(1) plus the runtime of the object?
 
 4.4 Union Select
 ----------------
@@ -528,6 +530,8 @@ example, the following three expressions describe the same type:
   (a)(b)(c){ d; }
   (a){ (b){ (c){ d; }}}
 
+Runtime is O(1);
+
 5.2 Function Value
 ------------------
 Abstract Syntax:
@@ -559,6 +563,9 @@ Arguments to multi-argument functions must have distinct names, because it's
 more likely you gave multiple arguments the same name accidentally than on
 purpose.
 
+Runtime is O(N log(M)), where N is the number of variables in scope that are
+captured by the function and M is the number of variables in scope.
+
 5.3 Function Application
 ------------------------
 Abstract Syntax:
@@ -585,6 +592,15 @@ expression:
 Function application creates a thunk if the function has not been supplied
 with all required arguments. Otherwise the body of the function is evaluated
 in the context of all arguments supplied to the function.
+
+When the function is supplied with all required arguments, runtime is O(log(N
++ M)) plus the runtime of func, the runtimes of each of the arguments, and the
+runtime of the body, where N is the number of arguments to the function and M
+is the number of variables captured by the function.
+
+When the function is not supplied with all required arguments, runtime is 
+O(log(N)) plus the runtime of func and the runtimes of each of the arguments,
+where N is the number of arguments supplied to the function.
 
 5.4 Function Bind
 -----------------
@@ -630,6 +646,8 @@ Concrete Syntax:
 Example:
   Int@!
 
+Runtime is O(1).
+
 6.2 Process Eval
 ----------------
 Abstract Syntax:
@@ -643,6 +661,12 @@ Example:
 
 A process that evaluates body and returns its value without performing any
 other actions. The body is not evaluated until the eval process is executed.
+
+Runtime to evaluate is O(N log(M)), where N is the number of variables
+captured by the body and M is the number of variables in scope.
+
+Runtime to execute is O(log(N)) plus the runtime of the body, where N is the
+number of variables captured by the body.
 
 6.3 Process Link
 ----------------
@@ -670,6 +694,14 @@ process until a value becomes available if necessary.
 
 The put process can be used to put a value onto the link.
 
+Runtime to evaluate is O(N log(M)), where N is the number of variables
+captured by the body and M is the number of variables in scope.
+
+Runtime to execute is O(log(N)) plus the runtime of the body, where N is the
+number of variables captured by the body.
+
+The runtime to execute a get or a put is O(1).
+
 6.4 Process Exec
 ----------------
 Abstract Syntax:
@@ -684,6 +716,15 @@ Example:
 Evaluates and executes each process in parallel, then evaluates and executes
 the body with the results of the processes assigned to variables in scope. The
 binding processes are not evaluated until the process is executed.
+
+Runtime to evaluate is the sum of O(N log(M)) for each binding and the body,
+where N is the number of variables captured by the binding or body and M is
+the number of variables in scope.
+
+Runtime to execute is the sum of O(N log(M)) for each binding and the body
+plus the runtime to evaluate and execute the bindings and the body, where N is
+the number of variables captured by the binding or body and M is the number
+of variables in scope of the binding or body.
 
 7. Polymorphism
 ---------------
@@ -729,6 +770,8 @@ Examples:
   <@ T@> { +(T@ just, Unit@ nothing); }
   <@ T@> { \(T@ x; Maybe@<T@>) { Maybe@<T@>(just: x); }; }
 
+Runtime is the runtime of the body.
+
 7.3 Poly Application
 --------------------
 Abstract Syntax:
@@ -740,6 +783,8 @@ Concrete Syntax:
 Examples:
   Maybe@<Int@>
   fromJust<Int@>(3)
+
+Runtime is the runtime of the poly.
 
 8. Literals
 -----------
@@ -785,6 +830,9 @@ The expression is evaluated by evaluating all arguments and creating the
 polymorphic function value with the results. The arguments may be evaluated in
 any order, sequentially or in parallel.
 
+Runtime is the runtimes of the arguments plus the runtime of creating the
+function value.
+
 8.2 Literal
 -----------
 Abstract Syntax:
@@ -829,6 +877,8 @@ corresponding field in the letter type or if the type of that field is not
 Unlike lists, literals can have zero letters. This is because we have the
 necessary type information to determine the type of the list even if it is
 empty.
+
+Runtime is the runtime of the desugared literal.
 
 9. Modules
 ----------
