--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -1280,3 +1280,8 @@ Notes:
   I think it would be cool if children were executed fairly. In particular,
   the amount of runtime a child gets is independent of how many children its
   siblings has.
+
+- Revisit literals. Because they feel really tedious to use.
+  For example, I'd like to use it to describe a list of Maybe@<Symbol@>, but
+  you can't, because that has structure. Why didn't we go with reading values
+  that are currently in scope?
